improve(accessibility): fix button styling on IE11 & remove noStyle prop
related to OPT-1441

--- a/client/src/components/Header/LogoutButton.scss
+++ b/client/src/components/Header/LogoutButton.scss
@@ -6,13 +6,20 @@
   display: none;
 }
 
-.LogoutButton button {
+.LogoutButton .Button {
   display: block;
-  padding: 0 6px;
+  padding: 0;
   border: none;
   font-size: inherit;
   color: #666;
   text-decoration: none;
   background: transparent;
   cursor: pointer;
+  font-family: inherit;
+  &:focus {
+    border: none;
+    box-shadow: none;
+    outline: 1px dotted #212121;
+    outline: 5px auto -webkit-focus-ring-color;
+  }
 }
