--- a/client/src/modules/components/EntityList/EntityItem.scss
+++ b/client/src/modules/components/EntityList/EntityItem.scss
@@ -129,6 +129,7 @@
       }
 
       span {
+        margin: 0px;
         pointer-events: none;
       }
 
